Fixed so the popup aligns correctly even if the annotate area has padding

--- a/css/src/ng-annotate.scss
+++ b/css/src/ng-annotate.scss
@@ -20,7 +20,7 @@
 
 .ng-annotation-popup
 {
-	width: 300px;
+	width: 225px;
 	position: absolute;
 	z-index: 1000;
 	background: #fff;
@@ -52,7 +52,7 @@
 
 .ng-annotation-tooltip
 {
-	width: 300px;
+	width: 225px;
 	position: absolute;
 	z-index: 1000;
 	background: #fff;
